--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^7.0.0",
     "@ionic/storage-angular": "^4.0.0",
+    "apexcharts": "^3.48.0",
     "ionicons": "^7.0.0",
+    "ng-apexcharts": "^1.9.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
